# start-connect

./: .gitattributes  .gitignore  DEVELOPMENT.md  README.md  UPDATER_SETUP.md  analyze_csv.py  analyze_target_ids.py  biome.json  mise.toml  package.json  pnpm-lock.yaml  vite.config.ts
.amazonq/rules/: tech-stack.md
.github/workflows/: ci.yml  pr-check.yml  release.yml
.serena/: project.yml
cloudflare-workers/: .dev.vars.example  DEPLOY.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
cloudflare-workers/src/: index.ts
docs/: chatter-migration-design.md
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
hsapp/: hsproject.json
scripts/: bump-version.sh
src/: App.test.tsx  App.tsx  index.css  main.tsx  routeTree.gen.ts
src-tauri/: .clippy.toml  .gitignore  Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml.example
src-tauri/src/: commands.rs  csv_processor.rs  hubspot.rs  lib.rs  secure_storage.rs
src-tauri/src/auth/: mod.rs  oauth.rs  storage.rs
src-tauri/src/commands/: auth.rs  business.rs  mod.rs
src-tauri/src/csv/: mod.rs  processor.rs
src-tauri/src/hubspot/: client.rs  mod.rs  object_types.rs
src/components/: AuthProvider.tsx  ExecutionConfirmDialog.tsx  FileDropzone.tsx  FixedActionBar.tsx  Header.tsx  HubSpotObjectsSheet.tsx  PortalIdConfirmInput.tsx  StepProgress.tsx
src/constants/: salesforce.ts
src/hooks/: useAuth.ts  useChatterAnalysis.ts  useChatterMigration.ts  useUpdater.ts  (+3 more)
(+26 files in other folders)
