[package]
name = "sf-hs-file-trans-app"
version = "0.1.0"
description = "Salesforce to HubSpot File Transfer Application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# HubSpotファイル転送アプリケーション用の依存関係

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauriフレームワーク
tauri = { version = "2.9.5", features = [] }
# Tauriプラグイン
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

# JSON/シリアライゼーション
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# CSV処理
csv = "1.3"
# HTTP通信
reqwest = { version = "0.12", features = ["json", "multipart"] }
# 非同期処理
tokio = { version = "1.0", features = ["full"] }
# エラーハンドリング
anyhow = "1.0"
# ログ
log = "0.4"
# 時間処理
chrono = { version = "0.4", features = ["serde"] }
# URL処理
url = "2.5"
percent-encoding = "2.3"
# base64エンコード/デコード
base64 = "0.22"
# キーチェーン管理
keyring = { version = "3.6", features = ["apple-native", "windows-native", "linux-native"] }
# ランダム文字列生成
rand = "0.8"
